--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,13 @@ theme: minima
 
 title: liminal
 
-author: Anson
+author: Anson Chan
 
 description: Drifting through the adult world and documenting my experiences
+
+minima:
+  social_links:
+    - { platform: github,  user_url: "https://github.com/ansonnchan" }
+    - { platform: linkedin, user_url: "https://www.linkedin.com/in/ansonnchan/" }
+    - { platform: instagram, user_url: "https://www.instagram.com/ansonnchan/" }
+
