--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Anson
 description: Drifting through the adult world and documenting my experiences
 
 url: "https://ansonnchan.github.io"
-baseurl: ""
+baseurl: "/chanblogs"
 
 theme: minima
 
@@ -14,3 +14,5 @@ minima:
   social_links:
     github: ansonnchan
     linkedin: ansonnchan
+
+permalink: /:title/ 
