Update minima configuration in _config.yml
Added 'show_feed' option to minima configuration.

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,10 @@ plugins:
   - jekyll-sitemap
 
 minima:
+  show_feed: false
   social_links:
     github: ansonnchan
     linkedin: ansonnchan
 
 permalink: /:title/ 
+
