Add social media username fields to config
Added github_username and linkedin_username fields.

--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,8 @@ theme: minima
 plugins:
   - jekyll-sitemap
 
-minima:
-  show_feed: false
-  social_links:
-    github: ansonnchan
-    linkedin: ansonnchan
+github_username: ansonnchan
+linkedin_username: ansonnchan
 
 permalink: /:title/
+
